syntax = "proto3";
option csharp_namespace = "VShop.Modules.Sales.Domain.Events";

import "SharedKernel/SharedKernel.Infrastructure/_schemas/uuid.proto";

message ShoppingCartDeliveryAddressSetDomainEvent 
{
    Uuid shopping_cart_id = 1;
    string city = 2;
    string country_code = 3;
	string postal_code = 4;
    string state_province = 5;
    string street_address = 6;
}