syntax = "proto3";
option csharp_namespace = "VShop.Modules.Sales.Domain.Events";

import "SharedKernel/SharedKernel.Infrastructure/_schemas/uuid.proto";
import "google/type/money.proto";

message ShoppingCartDeliveryCostChangedDomainEvent 
{
    Uuid shopping_cart_id = 1;
    google.type.Money delivery_cost = 2;
}