syntax = "proto3";
option csharp_namespace = "VShop.Modules.Sales.Domain.Events";

import "SharedKernel/SharedKernel.Infrastructure/_schemas/uuid.proto";
import "google/type/money.proto";

message ShoppingCartProductAddedDomainEvent 
{
    Uuid shopping_cart_id = 1;
    Uuid product_id = 2;
    int32 quantity = 3;
    google.type.Money unit_price = 4;
}